# nyx-sentinel-ai

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
data/mitre_attack/: technique_mapping.json
data/sample_alerts/: brute_force_alert.json  powershell_alert.json  recon_alert.json
docs/: architecture.md  demo_steps.md  github-actions-ci.yml  install_guide.md
screenshots/: README.md
scripts/: run_pipeline.py
src/nyx_sentinel/: __init__.py
src/nyx_sentinel/analysis/: incident_classifier.py
src/nyx_sentinel/config/: settings.py
src/nyx_sentinel/enrichment/: threat_intel.py
src/nyx_sentinel/extractors/: ioc_extractor.py
src/nyx_sentinel/forensics/: collector.py
src/nyx_sentinel/parsers/: alert_parser.py  models.py
src/nyx_sentinel/reporting/: report_generator.py
src/nyx_sentinel/reporting/templates/: incident_report.html.j2
src/nyx_sentinel/rules/: brute_force.yml  persistence.yml  privilege_escalation.yml  reconnaissance.yml  suspicious_powershell.yml
tests/: conftest.py  test_alert_parser.py  test_collector.py  test_incident_classifier.py  test_ioc_extractor.py  test_report_generator.py  test_threat_intel.py
