[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nyx-sentinel-ai"
version = "1.0.0"
description = "NYX SENTINEL AI — AI-Enhanced SOC and DFIR Platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.2",
    "loguru>=0.7.2",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "aiofiles>=23.2.1",
    "tenacity>=8.2.3",
    "fpdf2>=2.7.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.2",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "respx>=0.20.2",
    "ruff>=0.1.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py311"
